--- a/src/app/home/addrental/addrental.component.html
+++ b/src/app/home/addrental/addrental.component.html
@@ -1,3 +1,23 @@
-<p>
-  addrental works!
-</p>
+
+<div class="container" >
+  <h2>Add Your Property for Rent</h2>
+  <br><br>
+  <form (ngSubmit)="addProperty(addRentalForm)" #addRentalForm="ngForm">
+    <div class="form-group">
+      <label for="title">Title Of Property</label>
+      <input name="title" ngModel type="text" class="form-control" placeholder="Enter Title" required>
+      <small id="emailHelp" class="form-text text-muted">You Must Enter the Title less then 100 letters</small>
+    </div>
+    <div class="form-group">
+      <label for="price">Price</label>
+      <input name="price" ngModel type="text" class="form-control" placeholder="Enter Price" required>
+      <small id="emailHelp" class="form-text text-muted">Enter the price in rupees (5000.00)</small>
+    </div>
+    <div class="form-group">
+      <label for="price">Locality</label>
+      <input name="locality" ngModel type="text" class="form-control" placeholder="Enter Locality" required>
+      <small id="emailHelp" class="form-text text-muted">You Must Enter the Title less then 100 letters</small>
+    </div>
+    <button type="submit" [disabled]="!addRentalForm.valid" class="btn btn-primary btn-block">Submit</button>
+  </form>
+</div>
