--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">All Properties</a>
+          <a class="nav-link" >All Properties</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Add Property</a>
@@ -24,11 +24,5 @@
 </nav>
 <br><br><br>
 <div class="container">
-    <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6">
-            <app-addrental></app-addrental>
-        </div>
-        <div class="col-lg-3"></div>
-    </div>
+    <app-rentals></app-rentals>    
 </div>
