--- a/src/app/home/addrental/addrental.component.html
+++ b/src/app/home/addrental/addrental.component.html
@@ -1,6 +1,7 @@
 
 <div class="container" >
   <h2>Add Your Property for Rent</h2>
+  <p *ngIf="isPropertyAdded"  style="color:green">Your Property is added successfully</p>
   <br><br>
   <form (ngSubmit)="addProperty(addRentalForm)" #addRentalForm="ngForm">
     <div class="form-group">
@@ -17,6 +18,18 @@
       <label for="price">Locality</label>
       <input name="locality" ngModel type="text" class="form-control" placeholder="Enter Locality" required>
       <small id="emailHelp" class="form-text text-muted">You Must Enter the Title less then 100 letters</small>
+    </div>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <input name="description" ngModel type="text" class="form-control" placeholder="Description" required>
+    </div>
+    <div class="form-group">
+      <label for="ownername">Owner Name</label>
+      <input name="ownername" ngModel type="text" class="form-control" placeholder="Owner Name" required>
+    </div>
+    <div class="form-group">
+      <label for="ownercontact">Owner Contact</label>
+      <input name="ownercontact" ngModel type="text" class="form-control" placeholder="Owner Contact" required>
     </div>
     <button type="submit" [disabled]="!addRentalForm.valid" class="btn btn-primary btn-block">Submit</button>
   </form>
