--- a/src/app/home/rentals/rentals.component.html
+++ b/src/app/home/rentals/rentals.component.html
@@ -1,3 +1,17 @@
-<p>
-  rentals works!
-</p>
+<div *ngIf="mode=='list'" class="container">
+  <div class="row">
+    <div *ngFor="let property of properties" class="col-lg-4 col-md-4" style="margin-bottom:10px;">
+      <div class="card" style="width: 18rem;">
+        <!-- <img src="..." class="card-img-top" alt="..."> -->
+        <div class="card-body">
+          <h5 class="card-title">{{property.title}}</h5>
+         <!--  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+         <p style="color:green"> Rs {{property.price}}</p>
+          <a (click)="ViewDetails(property)" class="btn btn-primary">View Details</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<button class="btn-primary" *ngIf="mode=='single'" (click)="mode='list'">Back</button>
+<app-singleproperty *ngIf="mode=='single'"></app-singleproperty>
