--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+          <a [routerLink]="[ '/home']" class="nav-link">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" >All Properties</a>
+          <a routerLink="/allproperties" class="nav-link" >All Properties</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Add Property</a>
+            <a routerLink="/addproperty" class="nav-link" href="#">Add Property</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -24,5 +24,5 @@
 </nav>
 <br><br><br>
 <div class="container">
-    <app-rentals></app-rentals>    
+   <router-outlet></router-outlet> 
 </div>
