--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,2 +1,10 @@
-<router-outlet></router-outlet>
 
+
+<div class="row">
+    <div class="col-lg-3"></div>
+    <div class="col-lg-6">
+            <p>Welcome to Rental App Please <a routerLink="signin">Sign In</a> or <a routerLink="signup" >Sign Up</a> to continue</p>    
+        <router-outlet></router-outlet>
+    </div>
+    <div class="col-lg-3"></div>
+</div>
