--- a/src/app/home/addrental/addrental.component.html
+++ b/src/app/home/addrental/addrental.component.html
@@ -31,6 +31,10 @@
       <label for="ownercontact">Owner Contact</label>
       <input name="ownercontact" ngModel type="text" class="form-control" placeholder="Owner Contact" required>
     </div>
+    <div class="form-group">
+      <label for="ownercontact">Owner Email</label>
+      <input name="ownerEmail" ngModel type="text" class="form-control" placeholder="Owner Email" required>
+    </div>
     <button type="submit" [disabled]="!addRentalForm.valid" class="btn btn-primary btn-block">Submit</button>
   </form>
 </div>
