--- a/src/app/home/rentals/singleproperty/singleproperty.component.html
+++ b/src/app/home/rentals/singleproperty/singleproperty.component.html
@@ -9,13 +9,30 @@
       <p>{{property.description}}</p>
     </div>
     <div class="col">
-      <h2>Owner's Details</h2>
+<!--       <h2>Owner's Details</h2>
       <br>
       <p style="color: blue">Owner Name: {{property.ownername}}</p>
-      <p style="color: blue">Conntact : {{property.ownercontact}}</p>
+      <p style="color: blue">Conntact : {{property.ownercontact}}</p> -->
       <br>
       <h2 style="color: red">Price</h2>
       <h4 style="color:green">Rs {{property.price}}</h4>
+      <button (click)="showForm=!showForm" class="btn btn-primary btn-block">Enquire for this property</button>
+
+      <ng-container *ngIf="showForm">
+          <form (ngSubmit)="sendEnquiry(enquiryForm)" #enquiryForm="ngForm">
+            <div class="form-group">
+              <label>Message</label>
+              <input ngModel name="message" type="text" class="form-control" placeholder="Enter Message">
+            </div>
+            <div class="form-group">
+              <label> Your Email</label>
+              <input ngModel name="email" type="text" class="form-control" placeholder="Enter Email">
+            </div>
+            <button type="submit">Send Enquiry</button>
+          </form>
+      </ng-container>
+      
+
     </div>
     </div>
 </div>
