--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
           <a routerLink="/home/addproperty" class="nav-link" href="#">Add Property</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="/home/enquiries" class="nav-link" href="#">Enquiries</a>
+    </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
