--- a/src/app/home/addrental/addrental.component.html
+++ b/src/app/home/addrental/addrental.component.html
@@ -31,6 +31,11 @@
       <label for="ownercontact">Owner Contact</label>
       <input name="ownercontact" ngModel type="text" class="form-control" placeholder="Owner Contact" required>
     </div>
+    <div class="form-group">
+      <label>Add Image of the property</label>
+      <input (change)="selectFile($event)" type="file" class="form-control-file">
+      <p *ngIf="isUploaded">Uploaded Successfully</p>
+    </div>
     <button type="submit" [disabled]="!addRentalForm.valid" class="btn btn-primary btn-block">Submit</button>
   </form>
 </div>
