--- a/src/app/home/rentals/rentals.component.html
+++ b/src/app/home/rentals/rentals.component.html
@@ -1,4 +1,22 @@
 <div *ngIf="mode=='list'" class="container">
+    <div class="row">
+        <div class="col-lg-2">
+          <div ngbDropdown class="d-inline-block">
+            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Sort by Price</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+              <button (click)="getOrdered('desc')" ngbDropdownItem>High to low</button>
+              <button (click)="getOrdered('asc')" ngbDropdownItem>low to high</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8">
+            <form (ngSubmit)="search(searchForm.value.locality)" #searchForm="ngForm" class="form-inline my-2 my-lg-0">
+                <input required ngModel name="locality" class="form-control mr-sm-2" type="search" placeholder="Search Locality" aria-label="Search">
+                <button [disabled]="!searchForm.valid" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+    <br>
   <div class="row">
     <div *ngFor="let property of properties" class="col-lg-4 col-md-4" style="margin-bottom:10px;">
       <div class="card" style="width: 18rem;">
